deploy/centrala.yaml
apiVersion: v1
kind: Service
metadata:
  name: centrala
spec:
  selector:
    app: centrala
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: centrla
  labels:
    app: centrala
spec:
  replicas: 3
  selector:
    matchLabels:
      app: centrala
  template:
    metadata:
      labels:
        app: centrala
    spec:
      containers:
      - name: centrala
        image: macieklewkowicz/centrala:latest
        ports:
        - containerPort: 80
