deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: centrala
spec:
  rules:
  - http:
      paths:
      - path: /centrala
        pathType: Prefix
        backend:
          service:
            name: centrala
            port:
              number: 80
